--- a/Thesis-MSc-Main_Document.tex
+++ b/Thesis-MSc-Main_Document.tex
@@ -196,6 +196,11 @@
 \cleardoublepage
 
 
+%% _____________________ TEST 
+%% _____________________ TEST 
+i added some text here
+%% _____________________ TEST 
+
 
 %
 % -----------------------------------------------------------------------------
