--- a/Thesis-MSc-Bibliography.bib
+++ b/Thesis-MSc-Bibliography.bib
@@ -864,6 +864,7 @@ journal = {Journal of Multi‐Criteria Decision Analysis}
 	month = {06},
 	pages = {43-52},
 	title = {Innovation and Economic Growth},
+	journal = {Innovation and Growth in Tourism, OECD },
 	isbn = {9789264025011}
 }
 
@@ -1600,7 +1601,7 @@ journal = {Journal of Multi‐Criteria Decision Analysis}
 			author = {Zhan, S. and Lin, J. and Zhang, Z. and Zhong, Y.},
 			title = "{List-Based Simulated Annealing Algorithm forthe Traveling Salesman Problem}",
 			year = 2016,
-                  journal = {Computational Intelligence and Neuroscience Volume 2016, Article ID 1712630, 12 pages http://dx.doi.org/10.1155/2016/1712630}
+        	journal = {Computational Intelligence and Neuroscience Volume 2016, Article ID 1712630, 12 pages http://dx.doi.org/10.1155/2016/1712630}
 }
 
 @article{tdtsp_generation_dual},
