added read me with instructions on what to do

--- a/Thesis-MSc-Front_Cover.tex
+++ b/Thesis-MSc-Front_Cover.tex
@@ -33,14 +33,14 @@
 % un-comment the line corresponding to your degree.
 % You can add a degree name using this construct
 %
-\degree{Masters in Aerospace Engineering}
+\degree{Aerospace Engineering}
 %
 % -----------------------------------------------------------------------------
 % REQUIRED: The SUPERVISOR(s) - maximum of two
 \supervisor{Prof. Nuno Roma}
 %\supervisor{Prof. Luis Russo}
 % If no co-Supervisor comment the next line
-\othersupervisor{Prof. Prof. Luis Russo}
+\othersupervisor{Prof. Luis Russo}
 %
 % -----------------------------------------------------------------------------
 % REQUIRED: Date of examination
