worked on chapter 3. almost complete.

--- a/Thesis-MSc-Bibliography.bib
+++ b/Thesis-MSc-Bibliography.bib
@@ -12,6 +12,25 @@
 
 
 
+
+@article{deliveryman_problem,
+title = "A new formulation for the Traveling Deliveryman Problem",
+journal = "Discrete Applied Mathematics",
+volume = "156",
+number = "17",
+pages = "3223 - 3237",
+year = "2008",
+note = "Cologne/Twente Workshop on Graphs and Combinatorial Optimization",
+issn = "0166-218X",
+doi = "https://doi.org/10.1016/j.dam.2008.05.009",
+url = "http://www.sciencedirect.com/science/article/pii/S0166218X08002163",
+author = "Isabel Méndez-Díaz and Paula Zabala and Abilio Lucena",
+keywords = "Traveling deliveryman problem, Integer programming, Branch-and-cut algorithms"
+}
+
+
+
+
 %% ______________________________________________________________________________________________________________
 %%                                            ARTIGO    
 %% _____________________________________________________________________________________________________________                    
