--- a/Thesis-MSc-Main_Document.tex
+++ b/Thesis-MSc-Main_Document.tex
@@ -201,7 +201,7 @@
 \cleardoublepage
 %
 %Chapter 3
-\input{./Chapters/3.FTP/ftp.tex}
+\input{./Chapters/3.PF/pf.tex}
 \cleardoublepage
 
 % %Chapter 4
