Chapter 4)Optimization System is almost done

--- a/Thesis-MSc-Bibliography.bib
+++ b/Thesis-MSc-Bibliography.bib
@@ -12,6 +12,19 @@
 
 
 
+@article{two_opt_croes,
+author = {Croes, G. A.},
+title = {A Method for Solving Traveling-Salesman Problems},
+journal = {Operations Research},
+volume = {6},
+number = {6},
+pages = {791-812},
+year = {1958},
+doi = {10.1287/opre.6.6.791}
+}
+
+
+
 
 @article{deliveryman_problem,
 title = "A new formulation for the Traveling Deliveryman Problem",
