--- a/Thesis-MSc-Preamble_commands.tex
+++ b/Thesis-MSc-Preamble_commands.tex
@@ -34,6 +34,9 @@
 % \usepackage[noend]{algpseudocode}
 
 
+\usepackage{algorithm}
+\usepackage[noend]{algpseudocode}
+
 
 
 %% ______________________________ RAFA ______________________________________
@@ -108,7 +111,17 @@
 % The preference is for using 'algorithm2e'
 %\usepackage{algorithmic}
 %\usepackage[chapter]{algorithm}
-\usepackage[ruled,vlined,algochapter,norelsize,\languagename]{algorithm2e}
+
+
+
+%%% HERE HEREE HERE HERE
+%%% HERE HEREE HERE HERE
+%%% HERE HEREE HERE HERE%%% HERE HEREE HERE HERE
+%%% HERE HEREE HERE HERE
+%%% HERE HEREE HERE HERE
+%%% HERE HEREE HERE HERE%%% HERE HEREE HERE HERE
+%\usepackage[ruled,vlined,algochapter,norelsize,\languagename]{algorithm2e}
+
 %
 % -----------------------------------------------------------------------------
 % PACKAGE listings
