--- a/Thesis-MSc-Bibliography.bib
+++ b/Thesis-MSc-Bibliography.bib
@@ -7,9 +7,34 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{sa_cooling_influence,
+	doi = {10.1088/0305-4470/31/41/011},
+	url = {https://doi.org/10.1088%2F0305-4470%2F31%2F41%2F011},
+	year = 1998,
+	month = {oct},
+	publisher = {{IOP} Publishing},
+	volume = {31},
+	number = {41},
+	pages = {8373--8385},
+	author = {Yaghout Nourani and Bjarne Andresen},
+	title = {A comparison of simulated annealing cooling strategies},
+	journal = {Journal of Physics A: Mathematical and General}
+}
 
 
-
+@article{assignment_problem,
+title = "A survey for the quadratic assignment problem",
+journal = "European Journal of Operational Research",
+volume = "176",
+number = "2",
+pages = "657 - 690",
+year = "2007",
+issn = "0377-2217",
+doi = "https://doi.org/10.1016/j.ejor.2005.09.032",
+url = "http://www.sciencedirect.com/science/article/pii/S0377221705008337",
+author = "Eliane Maria Loiola and Nair Maria Maia de Abreu and Paulo Oswaldo Boaventura-Netto and Peter Hahn and Tania Querido",
+keywords = "Assignment, Integer programming, Combinatorial optimization, Facilities planning and design, Metaheuristics, Branch and bound"
+}
 
 
 @article{two_opt_croes,
@@ -1614,12 +1639,22 @@ journal = {Journal of Multi‐Criteria Decision Analysis}
                   journal = {Operations Research Letters Volume 5, Issue 4, October 1986, Pages 215-216}
 }
 
-@article{held_karp_lb},
-			author = {Held, M. and Karp, M.},
-			title = "{The Traveling-Salesman Problem and Minimum Spanning Trees}",
-			year = 1986,
-                  journal = {Operations Research 197018:6 , 1138-1162 }
+
+
+@article{held_karp_lb,
+    author = {Held, Michael and Karp, Richard M.},
+    title = {The Traveling-Salesman Problem and Minimum Spanning Trees},
+    journal = {Operations Research},
+    volume = {18},
+    number = {6},
+    pages = {1138-1162},
+    year = {1970},
+    doi = {10.1287/opre.18.6.1138},
+    URL = {https://doi.org/10.1287/opre.18.6.1138},
+    eprint = {https://doi.org/10.1287/opre.18.6.1138}
 }
+
+
 
 @article{multi_agent_SA},
 			author = {Wang, C. and Lin, M. and Zhong, Y. and Zhang, H.},
