review do prof adicionada

--- a/Thesis-MSc-Bibliography.bib
+++ b/Thesis-MSc-Bibliography.bib
@@ -67,7 +67,12 @@ keywords = "Traveling deliveryman problem, Integer programming, Branch-and-cut a
 }
 
 
-
+@MISC{bnb,
+    author = {Jens Clausen},
+    title = {Branch and Bound Algorithms -- Principles And Examples},
+    year = {1999},
+  journal = {Operations Research, Vol. 43, No. 2 (Mar. - Apr., 1995), pp. 367-371}
+}
 
 %% ______________________________________________________________________________________________________________
 %%                                            ARTIGO    
@@ -172,6 +177,22 @@ series = "Mathematics and its applications",
 publisher = "Reidel",
 }
 
+
+@Inbook{sa_convergence,
+author="Henderson, Darrall
+and Jacobson, Sheldon H.
+and Johnson, Alan W.",
+editor="Glover, Fred
+and Kochenberger, Gary A.",
+title="The Theory and Practice of Simulated Annealing",
+bookTitle="Handbook of Metaheuristics",
+year="2003",
+publisher="Springer US",
+address="Boston, MA",
+pages="287--319",
+isbn="978-0-306-48056-0",
+doi="10.1007/0-306-48056-5_10"
+}
 
 
 @article{SA_methods,
@@ -1611,12 +1632,7 @@ journal = {Journal of Multi‐Criteria Decision Analysis}
                   journal = {Operations Research, Vol. 43, No. 2 (Mar. - Apr., 1995), pp. 367-371}
 }
 
-@article{bnb_review},
-			author = {Clausen, J.},
-			title = "{Brandand Bound Algorithms: Principles and Examples}",
-			year = 1999,
-                  journal = {Operations Research, Vol. 43, No. 2 (Mar. - Apr., 1995), pp. 367-371}
-}
+
 
 @article{lkh_original},
 			author = {Lin, S. and Kernighan, B.},
