--- a/Thesis-MSc-Bibliography.bib
+++ b/Thesis-MSc-Bibliography.bib
@@ -982,7 +982,7 @@ journal = {Journal of Multi‐Criteria Decision Analysis}
       howpublished = "\url{https://reactjs.org/}"
 }
 
-@misc{react,
+@misc{redux,
 	author = {Dan Abramov},
       title = "{Redux: a predictable state container for JavaScript applications}",
       year = 2018,
