--- a/Thesis-MSc-Bibliography.bib
+++ b/Thesis-MSc-Bibliography.bib
@@ -7,6 +7,26 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+
+@misc{bfly_api,
+	    author = {Marques, R.},
+      title = "{Bfly API documentation}",
+      year = 2018,
+      month = {October},
+      day = {9},
+      howpublished = "\url{https://safe-plateau-51528.herokuapp.com/documentation}"
+}
+
+@misc{bfly_csa,
+	    author = {Marques, R.},
+      title = "{Bfly Flight search application}",
+      year = 2018,
+      month = {October},
+      day = {9},
+      howpublished = "\url{https://desolate-castle-31305.herokuapp.com/}"
+}
+
+
 @article{sa_cooling_influence,
 	doi = {10.1088/0305-4470/31/41/011},
 	url = {https://doi.org/10.1088%2F0305-4470%2F31%2F41%2F011},
