--- a/Thesis-MSc-Bibliography.bib
+++ b/Thesis-MSc-Bibliography.bib
@@ -149,6 +149,13 @@ title = {Heuristics for the Traveling Salesman Problem}
 }
 
 
+@Misc{numpy,
+  author =    {ravis E, Oliphant},
+  title =     {A guide to NumPy,},
+  year =      {2006},
+  note = {USA: Trelgol Publishing, }
+}
+
 
 @article{TDTSP_construction,
 author = {Russ J. Vander Wiel and Nikolaos V. Sahinidis},
