--- a/Thesis-MSc-Main_Document.tex
+++ b/Thesis-MSc-Main_Document.tex
@@ -214,11 +214,11 @@
 \cleardoublepage
 %
 %Chapter 6
-\input{./Chapters/6.SI/si.tex}
-\cleardoublepage
+%\input{./Chapters/6.SI/si.tex}
+%\cleardoublepage
 %Chapter 7
 \acresetall
-\input{./Chapters/7.ER/er.tex}
+\input{./Chapters/5.ER/er.tex}
 \cleardoublepage
 %
 %Chapter 8
