Updates from ShareLaTeX

--- a/Thesis-MSc-Bibliography.bib
+++ b/Thesis-MSc-Bibliography.bib
@@ -8,6 +8,30 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+@book{book_tourism,
+   author = "Monrgan Westcott",
+   title = "Innovation and Growth in Tourism",
+    publisher = "B.C. Open Textbook project",
+   year = "2006",
+   pages = 146,
+   url = "https://www.oecd-ilibrary.org/content/publication/9789264025028-en",
+   doi = "https://doi.org/https://doi.org/10.1787/9789264025028-en" 
+}
+
+
+% @book{book_tourism, 
+%     author={Morgan Westcott}, 
+%     journal={Faculty of Management Science and Informatics, University of Zilina }, 
+%     title={Introduction to Tourism and Hospitality in BC}, 
+%     "\url={https://opentextbc.ca/introtourism/}",
+%     year={2016}, 
+%     volume={2}, 
+%     number={1}, 
+%     pages={37-41}, 
+%     ISSN={2453-7314}, 
+%     month={June}
+% }
+
 @article{sa_initial_solution, 
     author={J. Szabo}, 
     journal={Faculty of Management Science and Informatics, University of Zilina }, 
@@ -902,6 +926,16 @@ journal = {Journal of Multi‐Criteria Decision Analysis}
       month = {June},
       day = {18},
       howpublished = "\url{https://wiki.python.org/moin/WebFrameworks}"
+}
+https://developers.amadeus.com/enterprise
+
+@misc{amadeus,
+	author = {Amadeus IT group},
+      title = "{Amadeus for developers}",
+      year = 2018,
+      month = {June},
+      day = {18},
+      howpublished = "\url{https://developers.amadeus.com/enterprise}"
 }
 
 @misc{tsc_kiwi,
