--- a/Thesis-MSc-Preamble_commands.tex
+++ b/Thesis-MSc-Preamble_commands.tex
@@ -84,6 +84,10 @@
 \usepackage{ctable}
 \usepackage{spreadtab}
 \usepackage{longtable}
+
+
+\usepackage{outlines}
+
 %
 % -----------------------------------------------------------------------------
 % PACKAGES graphicx, subfigure:
