--- a/Thesis-MSc-Preamble_commands.tex
+++ b/Thesis-MSc-Preamble_commands.tex
@@ -24,6 +24,7 @@
 \usepackage{iflang}
 
 
+
 %% ______________________________ RAFA ______________________________________
 %% ______________________________ RAFA ______________________________________
 
@@ -88,6 +89,7 @@
 
 \usepackage{outlines}
 
+%\usepackage{minipage}
 %
 % -----------------------------------------------------------------------------
 % PACKAGES graphicx, subfigure:
@@ -95,8 +97,19 @@
 % The package 'graphicx' supports formats PNG and JPG.
 % Package 'subfigure' allows to place figures within figures with own caption. 
 % For each of the subfigures use the command \subfigure.
+
+\usepackage{subcaption}
+
 \usepackage{graphicx}
-\usepackage[hang,small,bf,tight]{subfigure}
+%\usepackage[hang,small,bf,tight]{subfigure}
+
+%\usepackage{subfig}
+
+
+
+
+
+
 %
 % -----------------------------------------------------------------------------
 % PACKAGE caption:
@@ -127,6 +140,8 @@
 %\usepackage[ruled,vlined,algochapter,norelsize,\languagename]{algorithm2e}
 
 %
+%\usepackage{subfigure}
+
 % -----------------------------------------------------------------------------
 % PACKAGE listings
 % -----------------------------------------------------------------------------
