Updates from ShareLaTeX

--- a/Thesis-MSc-Bibliography.bib
+++ b/Thesis-MSc-Bibliography.bib
@@ -8,6 +8,13 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+@article{atsp_to_tsp_1,
+    author = {Jonker, R. and Volgenant, T.},
+    title = "{Transforming asymmetric into symmetric traveling salesman problems}",
+    year = 1983,
+    journal = {Operations Research Letters Volume 2, Issue 4, November 1983, Pages 161-163}
+}
+
 @book{book_tourism,
    author = "Monrgan Westcott",
    title = "Innovation and Growth in Tourism",
@@ -496,19 +503,21 @@ journal = {The Traveling Salesman Problem: A Computational Study}
 
 
 @article{lk_alg,
-author = {Lin, S. and Kernighan, B.},
-title = "{An Effective Heuristic Algorithm for the Traveling-Salesman Problem}",
-year = 1971,
-journal = {Bell Telephone Laboratories, Incorporated, Murray Hill, N.J.}
+    author = {Lin, S. and Kernighan, B.},
+    title = "{An Effective Heuristic Algorithm for the Traveling-Salesman Problem}",
+    year = 1971,
+    journal = {Bell Telephone Laboratories, Incorporated, Murray Hill, N.J.}
 }
 
 
-@article{atsp_transformation,
-author = {Jonker, R. and Volgenant, T.},
-title = "{Transforming asymmetric into symmetric traveling salesman problems}",
-year = 1983,
-journal = {Operations Research Letters Volume 2, Issue 4, November 1983, Pages 161-163}
-}
+
+
+% @article{atsp_transformation,
+% author = {Jonker, R. and Volgenant, T.},
+% title = "{Transforming asymmetric into symmetric traveling salesman problems}",
+% year = 1983,
+% journal = {Operations Research Letters Volume 2, Issue 4, November 1983, Pages 161-163}
+% }
 
 
 @article{ilp_tsp_0,
@@ -1206,16 +1215,16 @@ https://developers.amadeus.com/enterprise
 
 @article{tsp_book,
 			author = {Gutin, G. and Punne, A.},
-			title = "The Traveling Salesman Problem and its variations}",
+			title = "{The Traveling Salesman Problem and its variations}",
 			year = 2007,
                   journal = {Science + Business, Springer}	
 }
 
 @article{cite_1,
 			author = {Punne, A},
-			title = "The Traveling Salesman problem: applications, formulations and varitions}",
+			title = {"The Traveling Salesman problem: applications, formulations and variations}",
 			year = 2007,
-                  journal = {Science + Business, Springer}	
+            journal = {Science + Business, Springer}	
 }
 
 @article{cite_2,
@@ -1268,9 +1277,9 @@ https://developers.amadeus.com/enterprise
 
 @article{cite_9,
 			author = {Punne, A},
-			title = "{A travelling salesman problem with allocation, time window and precedence constraints Ð an application to ship scheduling}",
+			title = "{A travelling salesman problem with allocation, time window and precedence constraints and application to ship scheduling}",
 			year = 2000,
-                  journal = {Intl. Trans. in Operation Research 7 (2000) 231-244}	
+            journal = {Intl. Trans. in Operation Research 7 (2000) 231-244}	
 }
 
 @article{cite_10,
@@ -1676,10 +1685,10 @@ https://developers.amadeus.com/enterprise
 }
 
 @article{sa_multi_objective,
-			author = {Deb, K.},
-			title = "{A Simulated Annealing-Based Multiobjective Optimization Algorithm: AMOSA}",
-			year = 2011,
-                  journal = {IEEE TRANSACTIONS ON EVOLUTIONARY COMPUTATION}
+	author = {Deb, K.},
+    title = "{A Simulated Annealing-Based Multiobjective Optimization Algorithm: AMOSA}",
+    year = 2011,
+    journal = {IEEE transactions on evolutionary computation}
 }
 
 @article{tsp_exact_review,
@@ -1719,19 +1728,7 @@ https://developers.amadeus.com/enterprise
                   journal = {Bell Telephone Laboratories, Incorporated, Murray Hill, N.J.}
 }
 
-@article{atsp_to_tsp_1},
-			author = {Jonker, R. and Volgenant, T.},
-			title = "{Transforming asymmetric into symmetric traveling salesman problems}",
-			year = 1983,
-                  journal = {Operations Research Letters Volume 2, Issue 4, November 1983, Pages 161-163}
-}
 
-@article{atsp_to_tsp_2},
-			author = {Jonker, R. and Volgenant, T.},
-			title = "{Transforming asymmetric into symmetric traveling salesman problems: erratum}",
-			year = 1986,
-                  journal = {Operations Research Letters Volume 5, Issue 4, October 1986, Pages 215-216}
-}
 
 
 
