--- a/Thesis-MSc-Main_Document.tex
+++ b/Thesis-MSc-Main_Document.tex
@@ -13,7 +13,7 @@
 %         ApendixA.tex ... ApendixB.tex...
 % -----------------------------------------------------------------------------
 % The class "istulthesis" is based on the standard LaTeX 'report' class.
-% It can be used for Instituto Superior Tecnico thesis, as it follows the 
+% It can be used for Instituto Superior Tecnico thesis, as it follows the https://www.overleaf.com/6139349192mwrcjcczyjfw
 % regulations published by the Scientific Council of IST.
 % The class defines the document style. 
 % IST requires the thesis to be written in Arial or similar. 
@@ -287,14 +287,21 @@
 % If not required just comment the blocks
 \appendix
 %% First Appendix
-\pdfbookmark[1]{Appendix A}{appendix}
-\input{./Chapters/Thesis-MSc-AppendixA.tex}
+
+
+%\pdfbookmark[1]{Appendix A}{appendix}
+%\input{./Chapters/Thesis-MSc-AppendixA.tex}
+
+
 %% If Printing on DOUBLE SIDED pages, the second page should be white.
 %% Otherwise, comment the following command:
 \cleardoublepage
 %% Second Appendix
-\pdfbookmark[1]{Appendix B}{appendix}
-\input{./Chapters/Thesis-MSc-AppendixB.tex}
+
+
+%\pdfbookmark[1]{Appendix B}{appendix}
+%\input{./Chapters/Thesis-MSc-AppendixB.tex}
+
 %% If Printing on DOUBLE SIDED pages, the second page should be white.
 %% Otherwise, comment the following command:
 \cleardoublepage
