--- a/Thesis-MSc-Front_Cover.tex
+++ b/Thesis-MSc-Front_Cover.tex
@@ -15,7 +15,11 @@
 % The thesis image: arguments are the start position in the page.
 % You can change the image for your thesis, replacing the image name:
 %\thesislogo{2.5cm}{6cm}{./Images/thesis_logo}
-\thesislogo{2.5cm}{6cm}{./Images/tecnico-lisboa}
+%\thesislogo{2.5cm}{6cm}{./Images/tecnico-lisboa}
+% \thesislogo{2.5cm}{6cm}{./Images/capa_2}
+%\thesislogo{2.5cm}{6cm}{./Images/tecnico-lisboa}
+\thesislogo{2.5cm}{6cm}{./Images/capa_3}
+
 %
 % -----------------------------------------------------------------------------
 % REQUIRED: Thesis TITLE
@@ -37,10 +41,10 @@
 %
 % -----------------------------------------------------------------------------
 % REQUIRED: The SUPERVISOR(s) - maximum of two
-\supervisor{Prof. Nuno Roma}
+\supervisor{Prof. Doutor Nuno Filipe Valentim Roma}
 %\supervisor{Prof. Luis Russo}
 % If no co-Supervisor comment the next line
-\othersupervisor{Prof. Luis Russo}
+\othersupervisor{Prof. Doutor Luís Manuel Silveira Russo}
 %
 % -----------------------------------------------------------------------------
 % REQUIRED: Date of examination
@@ -62,10 +66,10 @@
 %
 % -----------------------------------------------------------------------------
 % The members of the Examination Committee
-\chairperson{Prof. Name of the Chairperson}
-\vogalone{Prof. Name of First Committee Member}
-\vogaltwo{Dr. Name of Second Committee Member}
-\vogalthree{Eng. Name of Third Committee Member}
+%\chairperson{Prof. Name of the Chairperson}
+%\vogalone{Prof. Name of First Committee Member}
+%\vogaltwo{Dr. Name of Second Committee Member}
+%\vogalthree{Eng. Name of Third Committee Member}
 %
 % -----------------------------------------------------------------------------
 % Please DO NOT MODIFY the following lines.
