--- a/Thesis-MSc-Front_Cover.tex
+++ b/Thesis-MSc-Front_Cover.tex
@@ -41,10 +41,10 @@
 %
 % -----------------------------------------------------------------------------
 % REQUIRED: The SUPERVISOR(s) - maximum of two
-\supervisor{Prof. Doutor Nuno Filipe Valentim Roma}
+\supervisor{Doutor Nuno Filipe Valentim Roma}
 %\supervisor{Prof. Luis Russo}
 % If no co-Supervisor comment the next line
-\othersupervisor{Prof. Doutor Luís Manuel Silveira Russo}
+\othersupervisor{Doutor Luís Manuel Silveira Russo}
 %
 % -----------------------------------------------------------------------------
 % REQUIRED: Date of examination
@@ -61,8 +61,8 @@
 % Place 'false' when delivering the draft version of the thesis.
 % The committee members should not be printed for the draft version. 
 % Place 'true' after the Examination Committee has accepted the thesis as final
-\finalthesis{true}
-%\finalthesis{false}
+%\finalthesis{true}
+\finalthesis{false}
 %
 % -----------------------------------------------------------------------------
 % The members of the Examination Committee
