--- a/Thesis-MSc-Preamble_commands.tex
+++ b/Thesis-MSc-Preamble_commands.tex
@@ -25,8 +25,18 @@
 
 
 
+
 %% ______________________________ RAFA ______________________________________
 %% ______________________________ RAFA ______________________________________
+
+\usepackage{nomencl}
+\makenomenclature
+ 
+\renewcommand{\nomname}{List of Symbols}
+ 
+\renewcommand{\nompreamble}{The next list describes several symbols that will be later used within the body of the document}
+
+
 
 
 
